--- a/DilshanJayasekara-COBSCCOMP192P-012/Base.lproj/LaunchScreen.storyboard
+++ b/DilshanJayasekara-COBSCCOMP192P-012/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,9 +12,42 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6q-kc-jAu">
+                                <rect key="frame" x="112" y="338.5" width="190" height="219"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LScreen" translatesAutoresizingMaskIntoConstraints="NO" id="kfs-vn-qVu">
+                                        <rect key="frame" x="20" y="20" width="150" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="QBx-dn-9n8"/>
+                                            <constraint firstAttribute="height" constant="150" id="xDu-wB-oMQ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpv-cJ-P7b">
+                                        <rect key="frame" x="47" y="178" width="96" height="26.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                        <color key="textColor" red="0.89153578367875652" green="0.47215211060314577" blue="0.069181156116556966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="219" id="4z4-a4-Xuv"/>
+                                    <constraint firstItem="xpv-cJ-P7b" firstAttribute="top" secondItem="kfs-vn-qVu" secondAttribute="top" constant="158" id="7vi-3P-kcZ"/>
+                                    <constraint firstItem="kfs-vn-qVu" firstAttribute="centerY" secondItem="L6q-kc-jAu" secondAttribute="centerY" constant="-14.5" id="ddC-zB-NpY"/>
+                                    <constraint firstItem="kfs-vn-qVu" firstAttribute="centerX" secondItem="L6q-kc-jAu" secondAttribute="centerX" id="hHJ-nI-g9G"/>
+                                    <constraint firstItem="xpv-cJ-P7b" firstAttribute="centerX" secondItem="kfs-vn-qVu" secondAttribute="centerX" id="k7j-Zi-FBV"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="L6q-kc-jAu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8zZ-gS-p8v"/>
+                            <constraint firstItem="L6q-kc-jAu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="112" id="sUt-6k-ZAY"/>
+                            <constraint firstItem="L6q-kc-jAu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="yoY-K3-JeA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -22,4 +56,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LScreen" width="100" height="100"/>
+    </resources>
 </document>
