Updated Launch Screen

--- a/DilshanJayasekara-COBSCCOMP192P-012/Base.lproj/LaunchScreen.storyboard
+++ b/DilshanJayasekara-COBSCCOMP192P-012/Base.lproj/LaunchScreen.storyboard
@@ -25,10 +25,10 @@
                                             <constraint firstAttribute="height" constant="150" id="xDu-wB-oMQ"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpv-cJ-P7b">
-                                        <rect key="frame" x="47" y="178" width="96" height="26.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WinWin Calculater" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpv-cJ-P7b">
+                                        <rect key="frame" x="-0.5" y="178" width="191" height="27"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                                        <color key="textColor" red="0.89153578367875652" green="0.47215211060314577" blue="0.069181156116556966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
